--- a/parameters.properties
+++ b/parameters.properties
@@ -1,6 +1,6 @@
 [DEFAULT]
-componentBucketName=apdemobucketinuswestformarch2109
-imagePipelineName=myworkstationpipelinename
+componentBucketName=
+imagePipelineName=
 awsRegion=us-west-2
 baseImageArn=arn:aws:imagebuilder:us-west-2:aws:image/ubuntu-server-18-lts-x86/2020.8.10
-codeCommitRepoName=imagebuildercr2
+codeCommitRepoName=
